= master

* Make Roda.freeze work if already frozen when using the autoload_{hash_branches,named_routes} plugins (jeremyevans)

* In content_security_policy plugin, add response.skip_content_security_policy! to avoid setting header (jeremyevans)

= 3.85.0 (2024-10-11)

* Avoid deprecation warning in public plugin when using Ruby 3.4.0-preview2 (jeremyevans)

* Evaluate class_matcher and symbol_matcher blocks in route-block context (jeremyevans)

* Allow class_matcher and symbol_matcher blocks to return non-arrays (jeremyevans)

* Make class_matcher and symbol_matcher plugin be able to build on top of existing registered matchers (jeremyevans)

* Make capture_erb plugin not break if String#capture is defined (jeremyevans)

= 3.84.0 (2024-09-12)

* Add hsts plugin for setting Strict-Transport-Security header (jeremyevans)

* Remove documentation from the gem to reduce gem size by 25% (jeremyevans)

= 3.83.0 (2024-08-12)

* Add assume_ssl plugin for making request ssl? method always return true (jeremyevans)

= 3.82.0 (2024-07-12)

* Add :encodings option to public plugin to support configurable encoding order (jeremyevans)

* Add :zstd option to public plugin to supplement it to serve zstd-compressed files with .zst extension (jeremyevans)

* Make capture_erb plugin call integrate better with erubi/capture_block (jeremyevans)

= 3.81.0 (2024-06-12)

* Make assets plugin :early_hints option follow Rack 3 SPEC if using Rack 3 (jeremyevans)

* Correctly parse Ruby 3.4 backtraces in exception_page plugin (jeremyevans)

* Support :until and :seconds option in hmac_paths plugin, for paths valid only until a specific time (jeremyevans)

= 3.80.0 (2024-05-10)

* Support :namespace option in hmac_paths plugin, allowing for easy per-user/per-group HMAC paths (jeremyevans)

= 3.79.0 (2024-04-12)

* Do not update template mtime when there is an error reloading templates in the render plugin (jeremyevans)
